--- a/static/css/_header.scss
+++ b/static/css/_header.scss
@@ -1,6 +1,6 @@
 @mixin flexCenter($direction, $backgnd){
     display:flex;
-    height:50vh;
+    height:15vh;
     justify-content:center;
     align-items: center;
     flex-direction: $direction;
@@ -8,7 +8,7 @@
 }
 
 header {
-    @include flexCenter(column,blue);
+    @include flexCenter(column,$backColor);
 
     
     
@@ -18,9 +18,6 @@ header {
         &:hover {
             background: $buttonHover;
         }
-        /*&::after {
-            content: "hello";
-        }
-        */
+        
     }
 }
