--- a/static/css/_vars.scss
+++ b/static/css/_vars.scss
@@ -1,4 +1,4 @@
 $buttonHover : rgb(112, 119, 116);
 $primaryBtn: rgb(247, 225, 225);
 $textColor : rgb(75, 21, 163);
-$backColor : blue;
+$backColor : rgb(98, 139, 139);
